# tango-example

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .make  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  COPYRIGHT  Dockerfile  LICENSE  Makefile  Makefile.old  Pipfile  README.md  code-analysis.sh  codeMetrics.json  docker-compose.yml  dsconfigdump.sh  environment.yml  output.txt  pip.conf  pogo.sh  pyproject.toml  pyutil.py  requirements-dev.txt  requirements.txt  server.py  setup.cfg  setup.py  tango-base-compose.yml  temp_dependencies_removed.txt  test_res.txt  vscode-debug.sh
.gitlab/: sbom.sh
.gitlab/ci/: runner-tags.gitlab-ci.yml
.make/: .make-release-support  Makefile.mk  build.sh  docker.mk  k8s.mk  release.mk
EventReceiver/: EventReceiver.py  EventReceiver.xmi
Motor/: Motor.py  Motor.xmi
Motor2/: Motor2.py  Motor2.xmi
NewMotor/: NewMotor.py  NewMotor.xmi
TrainingReceiver/: TrainingReceiver.py  TrainingReceiver.xmi
WebjiveTestDevice/: WebjiveTestDevice.py  WebjiveTestDevice.xmi
charts/: Makefile
charts/event-generator/: Chart.yaml  values.yaml
charts/event-generator/templates/: _helpers.tpl  event-generator.yaml
charts/ska-tango-examples/: Chart.yaml  values.yaml
charts/ska-tango-examples/data/: asynctabata.yaml  calendarclock.yaml  circulardependency.yaml  default.yaml  eventreceiver.yaml  forattrtabata.yaml  incorrectconfiguration.yaml  logtestdownstream.yaml  logtestupstream.yaml  longrunning_controller.yaml  longrunning_stations.yaml  longrunning_tiles.yaml  motor.yaml  multidevice.yaml  notangohost.yaml  powersupply.yaml  slowdevice.yaml  tabata.yaml  tarantatestdevice.yaml  theexample.yaml  timer.yaml  webjivetestdevice.yaml  workshopcounters.yaml
charts/ska-tango-examples/templates/: deviceservers.yaml  event-generator.yaml  generic-pv.yaml  ingress.yaml
charts/tango-base/: values.yaml
charts/tango-base/secrets/: tls.crt  tls.key
charts/tango-base/templates/: ingress.yaml  secrets.yaml  tango-rest.yaml  tangodb-pv.yaml  tangodb.yaml
charts/tango-example/: Chart.yaml  Values.yaml  values.yaml
charts/tango-example/data/: asynctabata.yaml  calendarclock.yaml  configuration.json  eventreceiver.yaml  forattrtabata.yaml  logtestdownstream.yaml  (+7 more)
charts/tango-gateway/: Chart.yaml  values.yaml
charts/test-parent/: Chart.yaml  helmfile.yaml  k8s-gateway-values.yml  values.gotmpl  values.yaml
charts/test-umbrella/: Chart.yaml  Values.yaml
docs/: Makefile  Pipfile  requirements.txt
docs/source/: conf.py  index.rst
docs/src/: conf.py  index.rst
environments/default/: values.yaml
environments/minikube/: values.yaml
helm-repo/: event-generator-0.1.0.tgz  index.yaml  tango-example-0.1.0.tgz
images/ska-tango-examples/: .release  Dockerfile  Makefile
images/ska-tango-examples-debian/: Dockerfile
jupyTango/: jupyTango - The Swiss Army Knife for the common Tango Controls user.md
k8s/: Makefile  README.md  tiller-acls.yml
k8s/chart/: Chart.yaml  values.yaml
manifest/engage/: integration-namespace.yaml  integration.yaml
manifests/engage/: integration-namespace.yaml  integration.yaml
module_example/: CalendarClock.py  EventReceiver.py  HumbleDevice.py  LogTestDownstream.py  LogTestUpstream.py  Motor.py  MultiDeviceServer.py  TestDS.py  TestDevice.py  WebjiveTestDevice.py  WebjiveTestDevice.xmi  event-generator.md  multidevice.py  powersupply.py  tracing.py
module_example/tracing_configure_scan_demo/: cbf_subarray_device.py  csp_subarray_device.py  dish_leaf_node_device.py  dish_master_device.py  sdp_subarray_device.py  subarray_csp_leaf_node_device.py  subarray_node_device.py  subarray_sdp_leaf_node_device.py  tracing.py
notebooks/: config-exporter.ipynb  exporter-test.ipynb  notebook-demo.ipynb  notebook-test.ipynb
old.make/: .make-release-support  k8s.mk
pact-spike/: pact_verifier.py  tango_record_replay.py
pact-spike/flask-example/: Consumer-Provider-pact.json  README.md  app.py  consumer.py  test_consumer.py
pact-spike/non-tango-rest-example/: consumer.py  mock_device_proxy.py  pact.json  pact_draft1.json  test_calendar_consumer.py  test_power_supply_consumer.py
pact-spike/tango-rest-example/: Consumer-Provider-pact.json  README.md  consumer.py  fetch_provider_state.py  test_calendar_consumer.py  test_consumer.py
post-deployment/: Makefile  requirements.txt  setup.cfg  test_requirements.txt
post-deployment/tests/: test_1_server_in_devicetestcontext.py  test_3_test_motor_server.py  test_4_test_event_receiver_server.py  test_calendar_clock.py  test_event.py  test_motor.py  test_power_supply.py  test_tabata.py
powersupply/: powersupply.py
scripts/: createBadges.py  deploy_elt.sh  elt_ctl.py  gen_csv_info.py  purge_xmi_tree.py  setup_devices.py  validate-metadata.sh
ska-skeleton/: __init__.py
ska_skeleton/: __init__.py  ska_skeleton.py
src/basic_example/: EventReceiver.py  Motor.py
src/other_examples/: CalendarClock.py  LogTestDownstream.py  LogTestUpstream.py  MultiDevice.py  TestDevice.py  WebjiveTestDevice.xmi  __init__.py  test_device2.py
src/ska_tango_examples/: DevFactory.py  notebook-test.ipynb  notebook.ipynb
test-harness/: Makefile
tests/: Makefile  conftest.py  lrc_utils.py  pytest.ini  requirements.txt  test_1_server_in_devicetestcontext.py  test_2_server_in_devicetestcontext.py  test_2_test_server_using_client.py  test_3_test_motor_server.py  test_3_test_server_using_client.py  test_4_test_event_receiver_server.py  test_calendar_clock.py  test_calender_clock.py  test_humble_device.py  test_powersupply.py  test_ska-skeleton.py  test_ska_skeleton.py
tests/integration/: test_async_tabata.py  test_basic_example.py  test_long_running.py  test_tabata.py  test_timer.py
tests/unit/: test_async_counter.py  test_asynctabata.py  test_calendar_clock.py  test_counter.py  test_event.py  test_long_running.py  test_long_running_device.py  test_long_running_device_client.py  test_motor.py  test_polling_counter.py  test_power_supply.py  test_powersupply.py  test_push_counter.py  test_tabata.py  test_tango_event_tracer.py  test_workshop.py  utils.py
(+114 files in other folders)
