[tool.poetry]
name = "ska-tango-examples"
version = "0.5.0"
description = "SKA Tango Examples"
authors = ["Matteo Di Carlo <tmatteo.dicarlo@inaf.it>"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_tango_examples", from = "src" }
]

[tool.poetry.scripts]
TangoExampleCounterDS = 'ska_tango_examples.counter.Counter:main'
TangoExampleMotorDS = 'ska_tango_examples.basic_example.Motor:main'
TangoExampleEventReceiverDS = 'ska_tango_examples.basic_example.EventReceiver:main'
TangoExampleTabataDS = 'ska_tango_examples.tabata.Tabata:main'
TangoExampleAsyncTabataDS = 'ska_tango_examples.tabata.AsyncTabata:main'

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = 'gitlab-registry'
url = 'https://gitlab.com/api/v4/projects/10753328/packages/pypi/simple'

[tool.poetry.dependencies]
python = "^3.9"
pytango = "9.4.3.dev0"
ska-tango-base = { version = "0.12.2+dev.d06c2b6f", source = "gitlab-registry" }
ska-ser-log-transactions = "*"
numpy = "1.23.0"
debugpy = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.8.2"
pytest = "^7.1.0"
pytest-bdd = "^4.0.1"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
flake8 = "^3.9.2"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.0.1"
nbmake = {extras = ["all"], version = "^1.4.1"}
nbqa = {extras = ["all"], version = "^1.7.0"}

[tool.poetry.group.docs.dependencies]
Sphinx = "^6"
ska-ser-sphinx-theme = "^0.1.1"
myst-parser = "^2.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
