[metadata]
description_file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
data_file = .coverage/.coverage
branch = True
source = src

[tool:pytest]
log_cli=true
log_level=DEBUG
junit_family=xunit1
testpaths = tests
addopts = 
    --forked 
    --json-report 
    --json-report-file=build/reports/report.json 
    --cov-report html:build/htmlcov
    --cov-report xml:build/reports/code-coverage.xml
    --cov=src
    --cucumberjson=build/reports/cucumber.json
    --junitxml=build/reports/unit-tests.xml
    --verbose

[coverage:paths]
source =
    src

[coverage:report]
show_missing = True

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
builder = html
