[metadata]
description_file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
data_file = .coverage/.coverage
branch = True
source = src

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
log_cli=true
log_cli_level=DEBUG
log_file = pytest-logs.txt
log_file_level = DEBUG
junit_family=xunit1
testpaths = tests/unit tests/integration
markers =
    post_deployment: run only with a real deployment of the ska-tango-examples repository
addopts =
    --forked
    --json-report
    --json-report-file=build/report.json
    --cov-report html:build/htmlcov
    --cov-report xml:build/code-coverage.xml
    --cov=ska_tango_examples
    --cucumberjson=build/cucumber.json
    --junitxml=build/report.xml
    --verbose

[coverage:paths]
source =
    src

[coverage:report]
show_missing = True

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
builder = html
