[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True

[tool:pytest]
collect_ignore_glob = ['*_dev.py']
log_cli = True
log_level=DEBUG
junit_family=xunit1
log_cli_level = DEBUG
log_file = pytest-logs.txt
log_file_level = DEBUG
testpaths = tests
addopts = 
    --forked 
    --json-report 
    --json-report-file=report.json 
    --junitxml=unit-tests.xml 
    --cucumberjson=cucumber.json 
    --cov-report term 
    --cov-report html 
    --cov-report xml 
    --cov=ska-tango-examples
markers =
    slow: marks tests as slow
    medium: marks tests as medium
    fast: marks tests as fast
bdd_features_base_dir = features                    

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
